<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">ABOUT</string>
    <string name="ad_return_too_early">Please wait %d more seconds in the ad</string>
    <string name="ad_unlock_success">You\'ve unlocked %d hours of ad-free streaming! ��</string>
    <string name="add">Add</string>
    <string name="add_url">Add Playlist Link</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_instructions">Instructions</string>
    <string name="app_instructions_sub">How to use the app</string>
    <string name="app_name">PLAYFy TV</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="blocked_app_alert_title">App Blocked!</string>
    <string name="blocked_app_installed">This app is installed on your device</string>
    <string name="blocked_app_multi_footer">This is required by %s</string>
    <string name="blocked_app_single_footer">This is required by %s</string>
    <string name="blocked_app_single_hint">Please remove this app from your device to continue.</string>
    <string name="blocked_app_single_message">%1$s has been caught crashing your %2$s party! This cheeky app is blocking your stream.</string>
    <string name="blocked_app_tap_remove">Tap to Remove</string>
    <string name="blocked_apps_count_badge">%d App(s) Blocked</string>
    <string name="blocked_apps_message">%1$d app(s) are blocking %2$s. Please remove them to continue using the app.</string>
    <string name="blocked_apps_multi_hint">Tap on any app below to remove it from your device.</string>
    <string name="blocked_apps_party_title">Blocked Apps Found!</string>
    <string name="blocked_badge">BLOCKED</string>
    <string name="blocked_boot_out">Remove App</string>
    <string name="blocked_boot_out_sub">Remove this app from your device</string>
    <string name="blocked_manage">Manage Apps</string>
    <string name="blocked_manage_sub">Open settings to manage and remove apps</string>
    <string name="blocked_run_away">Close App</string>
    <string name="blocked_run_away_sub">Exit and close the application</string>
    <string name="blocked_sneak_out">Close App</string>
    <string name="blocked_sneak_out_sub">Exit and close the application</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="channels">Channels</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_stream">Choose your preferred stream</string>
    <string name="chose_category">Chose Category</string>
    <string name="chose_file">Chose Playlist File</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_here">Click Here</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="communicate">Communicate</string>
    <string name="connection_error_text">Error connecting to the server, try again later.</string>
    <string name="connection_error_title">Server Connection Error</string>
    <string name="contact">Contact</string>
    <string name="contact_support">Contact Support</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_information">Copyright Information</string>
    <string name="cp_message">PLAYFy TV does not stream any of the channels included in this application, all the streaming links are from third party website available freely on the internet.\nWe\'re just giving way to stream and all content is the copyright of their owner.</string>
    <string name="default_notification_channel_name">Now playing</string>
    <string name="delete">Delete</string>
    <string name="dest_title">destination title</string>
    <string name="donate">Donate</string>
    <string name="donate_subt">Help us to keep alive</string>
    <string name="download_app">Download app</string>
    <string name="drm_type">DRM Type</string>
    <string name="dsa">Don\'t ask again</string>
    <string name="dsa_subtitle">You can change this in settings</string>
    <string name="empty_error">No %s Found</string>
    <string name="enable_low_quality">Force Low Quality</string>
    <string name="enable_low_quality_mode">Force Low Quality Mode</string>
    <string name="enter_playlist_url">Enter Playlist URL</string>
    <string name="enter_stream_details">Enter stream details to play</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_url">Enter Stream URL</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_message_authentication_expired">Sign in to use this app</string>
    <string name="error_message_bad_value">Incorrect input data</string>
    <string name="error_message_concurrent_stream_limit">Listening on too many devices</string>
    <string name="error_message_content_already_playing">Already playing that content</string>
    <string name="error_message_disconnected">Disconnected from media app</string>
    <string name="error_message_end_of_playlist">Nothing else is queued up</string>
    <string name="error_message_fallback">Something’s wrong. Try later.</string>
    <string name="error_message_info_cancelled">Couldn’t finish. Try again.</string>
    <string name="error_message_invalid_state">Can’t do that right now</string>
    <string name="error_message_io">Input/output error</string>
    <string name="error_message_not_available_in_region">Can’t get that content here</string>
    <string name="error_message_not_supported">This app can’t do that</string>
    <string name="error_message_parental_control_restricted">That content is blocked</string>
    <string name="error_message_permission_denied">Access denied</string>
    <string name="error_message_premium_account_required">Premium access required</string>
    <string name="error_message_setup_required">Setup required</string>
    <string name="error_message_skip_limit_reached">Can’t skip any more tracks</string>
    <string name="exit_application">Exit Application</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="favourites">Favourites</string>
    <string name="get_app">Get APP</string>
    <string name="get_updates_support">Get updates, support &amp; more</string>
    <string name="high">Highlights</string>
    <string name="instructions">Instructions:</string>
    <string name="insutructions_text">1. Click the button above �� \n\n2. Wait for the page to be load �� \n\n3. Check out the ads page for {d} seconds ⏳\n\n4. After {d} seconds Ads will be closed automatically �� </string>
    <string name="join_us_on_telegram">Join us on Telegram</string>
    <string name="open_1_ad_per_day">Open 1 AD per %d hours</string>
    <string name="playlists">Playlists</string>
    <string name="settings">Settings</string>
    <string name="sponsor_info_text">We know ads can be annoying. But without them, we won\'t have enough funds to keep the app running. Your support means everything to us!</string>
    <string name="sponsor_message">Help us keep the app running</string>
    <string name="sponsor_title">We Need Your Support</string>
    <string name="wait_time">Wait time: 10s • Trigger: every 24h</string>
</resources>