<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/res_0x7f0a01f5_mobile_navigation_xml"
    app:startDestination="@+id/homeFragment">
    <fragment
        android:label="@string/app_name"
        android:name="com.playfy.tv.ui.fragments.EventsFragment"
        android:id="@+id/homeFragment"/>
    <fragment
        android:label="@string/high"
        android:name="com.playfy.tv.ui.fragments.HighFragment"
        android:id="@+id/highFragment"/>
    <fragment
        android:label="@string/categories"
        android:name="com.playfy.tv.ui.fragments.CatsFragment"
        android:id="@+id/catsFragment">
        <action
            android:id="@+id/action_catsFragment_to_channelsFragment"
            app:destination="@+id/channelsFragment"/>
        <action
            android:id="@+id/action_catsFragment_to_playlistFragment"
            app:destination="@+id/playlist_nav"/>
    </fragment>
    <fragment
        android:label="{title}"
        android:name="com.playfy.tv.ui.fragments.ChannelsFragment"
        android:id="@+id/channelsFragment">
        <argument
            android:name="title"
            app:argType="string"/>
    </fragment>
    <activity
        android:label="activity_player"
        android:name="com.playfy.tv.activities.PlayerActivity"
        android:id="@+id/playerActivity">
        <argument
            android:name="slug"
            android:defaultValue=""
            app:argType="string"/>
        <argument
            android:name="type"
            android:defaultValue="1"
            app:argType="integer"/>
        <argument
            android:name="selected"
            android:defaultValue="0"
            app:argType="integer"/>
        <argument
            android:name="isLive"
            android:defaultValue="false"
            app:argType="boolean"/>
        <argument
            android:name="related"
            android:defaultValue="@null"
            app:argType="android.os.Parcelable[]"
            app:nullable="true"/>
        <argument
            android:name="headers"
            android:defaultValue="@null"
            app:argType="java.io.Serializable"
            app:nullable="true"/>
        <argument
            android:name="dt"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="dl"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true"/>
    </activity>
    <fragment
        android:label="@string/favourites"
        android:name="com.playfy.tv.ui.fragments.FavFragment"
        android:id="@+id/favFragment"/>
    <action
        android:id="@+id/action_global_favFragment"
        app:destination="@+id/favFragment"/>
    <fragment
        android:label="@string/playlists"
        android:name="com.playfy.tv.ui.fragments.PlaylistsFragment"
        android:id="@+id/playlistsFragment">
        <action
            android:id="@+id/action_playlistsFragment_to_playlistFragment"
            app:destination="@+id/playlist_nav"/>
    </fragment>
    <navigation
        android:id="@+id/playlist_nav"
        app:startDestination="@+id/playlistFragment">
        <fragment
            android:label="{title}"
            android:name="com.playfy.tv.ui.fragments.PlaylistFragment"
            android:id="@+id/playlistFragment">
            <argument
                android:name="title"
                app:argType="string"/>
            <argument
                android:name="path"
                app:argType="string"/>
        </fragment>
        <argument
            android:name="title"
            app:argType="string"/>
        <argument
            android:name="path"
            app:argType="string"/>
    </navigation>
    <fragment
        android:label="@string/settings"
        android:name="com.playfy.tv.ui.fragments.SettingsFragment"
        android:id="@+id/settingsFragment">
        <action
            android:id="@+id/action_settingsFragment_to_playlistsFragment"
            app:destination="@+id/playlistsFragment"/>
    </fragment>
</navigation>
